--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -10252,6 +10252,8 @@ items:
             href: api/organization-get.md
           - name: Update org details
             href: api/organization-update.md
+          - name: Activate service
+            href: api/organization-activateservice.md
         - name: Organization settings
           href: resources/organizationSettings.md
           items:
