--- a/concepts/tutorials.yml
+++ b/concepts/tutorials.yml
@@ -59,8 +59,6 @@ landingContent:
             url: /graph/tutorials/javascript
           - text: React
             url: /graph/tutorials/react
-          - text: Microsoft Graph Toolkit
-            url: /learn/modules/msgraph-toolkit-intro
   - title: Microsoft platforms
     linkLists:
       - linkListType: tutorial
@@ -79,13 +77,15 @@ landingContent:
             url: /graph/tutorials/teams
           - text: Microsoft Graph Toolkit
             url: /learn/modules/msgraph-toolkit-intro
-  - title: Scenarios
+  - title: Learn modules
     linkLists:
-      - linkListType: tutorial
+      - linkListType: learn
         links:
-          - text: Change notifications and change tracking
-            url: /learn/modules/msgraph-changenotifications-trackchanges
-          - text: Optimize data usage with query parameters
-            url: /learn/modules/optimize-data-usage
-          - text: Optimize network traffic
-            url: /learn/modules/optimize-network-traffic
+          - text: Microsoft Graph Fundamentals
+            url: /learn/paths/m365-msgraph-fundamentals
+          - text: Build apps with Microsoft Graph - Associate
+            url: /learn/paths/m365-msgraph-associate
+          - text: Get started with Microsoft Graph Toolkit
+            url: /learn/modules/msgraph-toolkit-intro
+          - text: Explore Microsoft Graph scenarios for JavaScript development
+            url: /learn/paths/m365-msgraph-scenarios
