update EM approval object description

--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -11225,6 +11225,19 @@ items:
             items:
             - name: List
               href: api/accesspackageassignment-list.md
+          - name: Access package assignment approval
+            href: resources/approval.md
+            items:
+            - name: Approval step
+              href: resources/approvalstep.md
+            - name: List approval steps
+              href: api/approval-list-steps.md
+            - name: Get approval
+              href: api/approval-get.md
+            - name: Get approval step
+              href: api/approvalstep-get.md
+            - name: Update approval step
+              href: api/approvalstep-update.md
           - name: Access package assignment policy
             href: resources/accesspackageassignmentpolicy.md
             items:
@@ -11317,20 +11330,6 @@ items:
               href: api/connectedorganization-delete-externalsponsors.md
             - name: Remove internal sponsors
               href: api/connectedorganization-delete-internalsponsors.md
-          - name: Approval
-            href: resources/approval.md
-            items:
-            - name: Get
-              href: api/approval-get.md
-          - name: Approval step
-            href: resources/approvalstep.md
-            items:
-            - name: List
-              href: api/approval-list-steps.md
-            - name: Get 
-              href: api/approvalstep-get.md
-            - name: Update 
-              href: api/approvalstep-update.md
           - name: Entitlement management settings
             href: resources/entitlementmanagementsettings.md
             items:
