windowsupdates: Rename topic to "Deploy a feature update"
https://github.com/microsoftgraph/microsoft-graph-docs/pull/12220/files#r613785650

--- a/concepts/toc.yml
+++ b/concepts/toc.yml
@@ -208,7 +208,7 @@ items:
                 href: windowsupdates-deployments.md
               - name: Enroll in management
                 href: windowsupdates-enroll.md
-              - name: Deploy an update
+              - name: Deploy a feature update
                 href: windowsupdates-deploy-update.md
               - name: Deploy an expedited update
                 href: windowsupdates-deploy-expedited-update.md
