--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -9468,6 +9468,7 @@ items:
           - name: Assign
             href: api/cloudpcprovisioningpolicy-assign.md
       - name: Operating system updates (preview)
+        displayName: Windows updates
         items:
         - name: Catalog     
           items:
