--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -9470,7 +9470,9 @@ items:
       - name: Operating system updates (preview)
         displayName: Windows updates
         items:
-        - name: Catalog     
+        - name: Updates
+          href: resources/windowsupdates-updates.md
+        - name: Catalog
           items:
           - name: Catalog
             href: resources/windowsupdates-catalog.md
@@ -9497,17 +9499,17 @@ items:
             href: resources/windowsupdates-expeditedqualityupdatereference.md
           - name: Feature update reference
             href: resources/windowsupdates-featureupdatereference.md
-        - name: Deployment audience
-          href: resources/windowsupdates-deploymentaudience.md
-          items:
-          - name: List members
-            href: api/windowsupdates-deploymentaudience-list-members.md
-          - name: List exclusions
-            href: api/windowsupdates-deploymentaudience-list-exclusions.md
-          - name: Update members and exclusions
-            href: api/windowsupdates-deploymentaudience-updateaudience.md
-          - name: Update by ID
-            href: api/windowsupdates-deploymentaudience-updateaudiencebyid.md
+          - name: Deployment audience
+            href: resources/windowsupdates-deploymentaudience.md
+            items:
+            - name: List members
+              href: api/windowsupdates-deploymentaudience-list-members.md
+            - name: List exclusions
+              href: api/windowsupdates-deploymentaudience-list-exclusions.md
+            - name: Update members and exclusions
+              href: api/windowsupdates-deploymentaudience-updateaudience.md
+            - name: Update by ID
+              href: api/windowsupdates-deploymentaudience-updateaudiencebyid.md
         - name: Updatable asset
           href: resources/windowsupdates-updatableasset.md
           items:
