--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -10805,10 +10805,16 @@ items:
              - name: Delete
                href: api/b2xidentityuserflow-delete.md
              - name: List identity providers
-               href: api/b2xidentityuserflow-list-identityproviders.md
+               href: api/b2xidentityuserflow-list-userflowidentityproviders.md
              - name: Add identity provider
-               href: api/b2xidentityuserflow-post-identityproviders.md
+               href: api/b2xidentityuserflow-post-userflowidentityproviders.md
              - name: Remove identity provider
+               href: api/b2xidentityuserflow-delete-userflowidentityproviders.md
+             - name: List identity providers (deprecated)
+               href: api/b2xidentityuserflow-list-identityproviders.md
+             - name: Add identity provider (deprecated)
+               href: api/b2xidentityuserflow-post-identityproviders.md
+             - name: Remove identity provider (deprecated)
                href: api/b2xidentityuserflow-delete-identityproviders.md
              - name: List user attribute assignments
                href: api/b2xidentityuserflow-list-userattributeassignments.md
