--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -13150,6 +13150,8 @@ items:
           href: api/profilephoto-update.md
         - name: Complete migration for team
           href: api/team-completemigration.md
+        - name: List permission grants of team
+          href: api/team-list-permissiongrants.md
       - name: Group (team)
         href: resources/group.md
         items:
