--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -11214,6 +11214,17 @@ items:
               href: api/accessreviewpolicy-get.md
             - name: Update
               href: api/accessreviewpolicy-update.md
+          - name: Access review history definition
+            href: resources/accessreviewhistorydefinition.md
+            items:
+            - name: Get
+              href: api/accessreviewhistorydefinition-get.md
+            - name: List
+              href: api/accessreviewhistorydefinition-list.md
+            - name: Create
+              href: api/accessreviewhistorydefinition-create.md
+            - name: Generate a download uri
+              href: api/accessreviewhistorydefinition-generatedownloaduri.md
         - name: Access reviews (legacy)
           href: resources/accessreviews-root.md
           items:
