--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -11192,6 +11192,8 @@ items:
               href: api/accessreviewscheduledefinition-delete.md 
             - name: Update
               href: api/accessreviewscheduledefinition-update.md
+            - name: Filter by current user
+              href: api/accessreviewinstancedecisionitem-filterbycurrentuser.md
           - name: Access review instance
             href: resources/accessreviewinstance.md
             items:
@@ -11199,6 +11201,8 @@ items:
               href: api/accessreviewinstance-list.md
             - name: Get
               href: api/accessreviewinstance-get.md
+            - name: Filter by current user
+              href: api/accessreviewinstance-filterbycurrentuser.md
             - name: List pending approval
               href: api/accessreviewinstance-pendingaccessreviewinstances.md
             - name: Send reminder
@@ -11211,11 +11215,19 @@ items:
               href: api/accessreviewinstance-applydecisions.md
             - name: Batch record decisions
               href: api/accessreviewinstance-batchrecorddecisions.md
+            - name: Reset decisions
+              href: api/accessreviewinstance-resetdecisions.md
+            - name: List decisions
+              href: api/accessreviewinstance-list-decisions.md
           - name: Access review instance decision item
             href: resources/accessreviewinstancedecisionitem.md
             items:
             - name: List
               href: api/accessreviewinstancedecisionitem-list.md
+            - name: Get
+              href: api/accessreviewinstancedecisionitem-get.md
+            - name: Filter by current user
+              href: api/accessreviewinstancedecisionitem-filterbycurrentuser.md
             - name: List pending approval
               href: api/accessreviewinstancedecisionitem-listpendingapproval.md
             - name: Update
