--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -9750,6 +9750,8 @@ items:
           href: api/educationsubmissionresource-delete.md
         - name: Get submission
           href: api/educationsubmission-get.md
+        - name: Setup assignment resource folder
+          href: api/educationsubmission-setupresourcesfolder.md
         - name: Submit submission
           href: api/educationsubmission-submit.md
         - name: Unsubmit submission
