--- a/concepts/toc.yml
+++ b/concepts/toc.yml
@@ -475,6 +475,10 @@ items:
                 href: change-notifications-delivery.md
               - name: Get change notifications for chat and channel messages
                 href: teams-changenotifications-chatmessage.md
+                name: Get change notifications for team and channel
+                href: teams-changenotifications-team-and-channels.md
+                name: Get change notifications for team membership
+                href: teams-changenotifications-teamMembership
               - name: Change notifications for cloud printing
                 href: universal-print-webhook-notifications.md
           - name: Change tracking
