--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -12917,6 +12917,8 @@ items:
           href: api/itemanalytics-get.md
         - name: Get activities by interval
           href: api/itemactivity-getbyinterval.md
+        - name: Create sharing link
+          href: api/listitem-createlink.md
       - name: Pages
         items:
         - name: Site page
