--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -10641,11 +10641,13 @@ items:
             href: api/certificatebasedauthconfiguration-post-certificatebasedauthconfiguration.md
           - name: Delete
             href: api/certificatebasedauthconfiguration-delete.md
-        - name: Conditional access
+        - name: Conditional Access
           items:
+          - name: Conditional Access
+            href: resources/privilegedidentitymanagement-root.md
           - name: Policies
             items:
-            - name: Conditional access policy
+            - name: Conditional Access policy
               href: resources/conditionalaccesspolicy.md
             - name: List
               href: api/conditionalaccessroot-list-policies.md
