--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -11238,7 +11238,7 @@ items:
               href: api/accessreviewhistorydefinition-create.md
             - name: Generate download URI
               href: api/accessreviewhistorydefinition-generatedownloaduri.md
-        - name: Access reviews (legacy)
+        - name: Access reviews (deprecated)
           href: resources/accessreviews-root.md
           items:
           - name: Access review
