--- a/concepts/toc.yml
+++ b/concepts/toc.yml
@@ -167,22 +167,12 @@ items:
       - name: Connecting external content (preview)
         displayName: connectors
         items:
-          - name: Overview of Microsoft Graph connectors
-            href: connecting-external-content-connectors-overview.md
-          - name: Connectors API overview
-            href: connecting-external-content-connectors-api-overview.md
-          - name: Play with connectors API on Postman
-            href: connecting-external-content-connectors-api-postman.md
           - name: Quickstart Build your first custom connector
             href: connecting-external-content-build-quickstart.yml
-          - name: Manage connections
-            href: connecting-external-content-manage-connections.md
-          - name: Manage schema
-            href: connecting-external-content-manage-schema.md            
-          - name: Manage items
-            href: connecting-external-content-manage-items.md
-          - name: API limits
-            href: connecting-external-content-api-limits.md                 
+          - name: External groups
+            href: connecting-external-content-external-groups.md
+          - name: API permissions
+            href: connecting-external-content-api-permissions.md
       - name: Data access
         displayName: Microsoft Graph data connect
         items:
