--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -11342,7 +11342,7 @@ items:
               href: api/accessreviewinstance-get.md
             - name: Filter by current user
               href: api/accessreviewinstance-filterbycurrentuser.md
-            - name: List pending approval
+            - name: List pending approval (deprecated)
               href: api/accessreviewinstance-pendingaccessreviewinstances.md
             - name: Send reminder
               href: api/accessreviewinstance-sendreminder.md
@@ -11367,7 +11367,7 @@ items:
               href: api/accessreviewinstancedecisionitem-get.md
             - name: Filter by current user
               href: api/accessreviewinstancedecisionitem-filterbycurrentuser.md
-            - name: List pending approval
+            - name: List pending approval (deprecated)
               href: api/accessreviewinstancedecisionitem-listpendingapproval.md
             - name: Update
               href: api/accessreviewinstancedecisionitem-update.md
