updating toc.yml for timecard-post

--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -13671,7 +13671,7 @@ items:
           - name: List
             href: api/timecard-list.md
           - name: Create
-            href: api/timecard-create.md
+            href: api/timecard-post.md
           - name: Get
             href: api/timecard-get.md
           - name: Replace
