--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -9489,18 +9489,18 @@ items:
             href: resources/unifiedroledefinition.md
             items:
             - name: List
-              href: api/cloudpcrbacapplication-list-roledefinitions.md
+              href: api/rbacapplication-list-roledefinitions.md
             - name: Get
               href: api/cloudpc-unifiedroledefinition-get.md
-          - name: Role assignment
-            href: resources/cloudpc-rbac-unifiedroleassignmentmultiple.md
+          - name: Role assignment multiple
+            href: resources/unifiedroleassignmentmultiple.md
             items:
             - name: List
-              href: api/cloudpcrbacapplication-list-roleassignments.md
+              href: api/rbacapplicationmultiple-list-roleassignments.md
+            - name: Create
+              href: api/rbacapplicationmultiple-post-roleassignments.md
             - name: Get
               href: api/cloudpc-unifiedroleassignmentmultiple-get.md
-            - name: Create
-              href: api/cloudpc-unifiedroleassignmentmultiple-post.md
             - name: Update
               href: api/cloudpc-unifiedroleassignmentmultiple-update.md
             - name: Delete
@@ -10484,9 +10484,9 @@ items:
             href: resources/unifiedroleassignmentmultiple.md
             items:
             - name: List
-              href: api/unifiedroleassignmentmultiple-list.md
+              href: api/rbacapplicationmultiple-list-roleassignments.md
             - name: Create
-              href: api/unifiedroleassignmentmultiple-post.md
+              href: api/rbacapplicationmultiple-post-roleassignments.md
             - name: Get
               href: api/unifiedroleassignmentmultiple-get.md
             - name: Update
