--- a/concepts/toc.yml
+++ b/concepts/toc.yml
@@ -494,19 +494,19 @@ items:
                 href: webhooks-with-resource-data.md
               - name: Get notifications delivered different ways
                 href: change-notifications-delivery.md
-                name: Change notification in Microsoft Teams
+              - name: Change notifications for cloud printing
+                href: universal-print-webhook-notifications.md
+              - name: Change notification in Microsoft Teams
                 displayName: Change notification in Microsoft Teams
                 items:
                   - name: Overview
                     href: change-notification-in-Microsoft-Teams-overview.md
-                  - name: Get change notifications for chat and channel messages
+                  - name: Change notifications for chat and channel messages
                     href: teams-changenotifications-chatmessage.md
-                  - name: Get change notifications for team and channel events
+                  - name: Change notifications for team and channel events
                     href: teams-changenotifications-team-and-channels.md
-                  - name: Get change notifications for team membership
+                  - name: Change notifications for team membership
                     href: teams-changenotifications-teamMembership.md
-              - name: Change notifications for cloud printing
-                href: universal-print-webhook-notifications.md
           - name: Change tracking
             displayName: Delta query, track changes, Outlook calendar, Groups, Outlook mail, Users
             items:
